# cosmos-rl

./: .buildinfo  .gitignore  Dockerfile  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.github/workflows/: build-and-test.yaml
_sources/: index.rst.txt
_sources/async/: overview.rst.txt
_sources/distillation/: on_policy_distillation.rst.txt
_sources/elastic/: overview.rst.txt
_sources/multi_turn/: multi-turn rollout example.rst.txt
_sources/multinodes/: dgxc_lepton.rst.txt  overview.rst.txt
_sources/parallelism/: overview.rst.txt
_sources/profiler/: overview.rst.txt  trace_format.rst.txt
_sources/quantization/: fp8.rst.txt
_sources/quickstart/: configuration.rst.txt  customization.rst.txt  dataflow.rst.txt  hf_models_support.rst.txt  installation.rst.txt  load_balanced_batching.rst.txt
_sources/rollout/: async_rollout.rst.txt  overview.rst.txt  trtllm.rst.txt  vllm.rst.txt
_sources/vla/: overview.rst.txt
_sources/wfm/: overview.rst.txt
async/: overview.html
configs/: sft_tao_vl_reason_daft_subsample.toml
cosmos_rl/launcher/: launch_all.py
cosmos_rl/policy/config/: __init__.py
cosmos_rl/policy/kernel/moe/: moe.py
cosmos_rl/policy/model/deepseek_v3/: deepseekv3_mapped.py
cosmos_rl/policy/trainer/llm_trainer/: grpo_trainer.py  sft_trainer.py
cosmos_rl/policy/worker/: sft_worker.py
cosmos_rl/rollout/vllm_rollout/: monkey_patch_for_fp8.py  vllm_rollout_async.py
cosmos_rl/rollout/worker/: rollout_control.py
cosmos_rl/tools/custom_hooks/: README.md  tao_sft_example.py  tao_vl_reason_daft_sft_example.py
cosmos_rl/tools/dataset/: diffusion_nft.py
cosmos_rl/utils/: checkpoint.py  multi_rank_weight_loader.py  parallelism.py
distillation/: on_policy_distillation.html
elastic/: overview.html
multi_turn/: multi-turn rollout example.html
multinodes/: dgxc_lepton.html  overview.html  slurm.html
parallelism/: overview.html
profiler/: overview.html  trace_format.html
quantization/: fp8.html
quickstart/: configuration.html  customization.html  dataflow.html  hf_models_support.html  installation.html  load_balanced_batching.html  single_node_example.html
rollout/: async_rollout.html  overview.html  trtllm.html  vllm.html
tests/: launch_test_worker.py  run_test.sh  test_checkpoint.py  test_deepep.py  test_hf_models.py  test_hf_models_tp.py  test_integration.py  test_parallel_map.py  test_resume_data_index.py
tests/data/: test_policy_extract_pp_1_fsdp_1_tp_1.npy  test_policy_extract_pp_1_fsdp_2_tp_2.npy  test_policy_extract_pp_2_fsdp_2_tp_1.npy  test_rollout_extract_pp_1_fsdp_1_tp_1.npy  test_rollout_extract_pp_1_fsdp_1_tp_4.npy
vla/: overview.html
wfm/: overview.html
