[project]
name = "cosmos-rl"
description = "Cosmos-RL is a flexible and scalable Reinforcement Learning framework specialized for Physical AI applications."
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
    "fastapi",
    "uvicorn",
    "transformers>=4.57.0,<5.0.0",  # 4.53.* error: https://github.com/vllm-project/vllm-ascend/pull/1482, 4.52.* warning: https://github.com/huggingface/transformers/pull/38366
    "datasets>=4.4.1",
    "pydantic",
    "math_verify",
    "nest_asyncio",
    "pybind11[global]",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "torchao>=0.10.0",
    "tensordict==0.7.2",
    "toml",
    "StrEnum",
    "redis",
    "msgpack",
    "qwen-vl-utils",
    "pynvml",
    "boto3",
    "modelscope",
    "cloudpickle",
    "click",
    "rich",
    "pyyaml",
    "blobfile",
    "nvidia-nccl-cu12>=2.26.2",
    "liger_kernel",
    "accelerate",
    "kernels",
    "diffusers>=0.36.0", # For cosmos-predict2.5 better use  @ git+https://github.com/huggingface/diffusers.git@ec37629
    "peft",
    "zmq>=0.0.0",
    "nvidia-ml-py>=13.590.48",
]

[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "cosmos_rl/_version.py"
tag_regex = "^(?:cosmos-rl-)?v(?P<version>\\d+\\.\\d+\\.\\d+.*)$"
fallback_version = "0.0.0"
version_scheme = "no-guess-dev"
local_scheme = "node-and-date"

[project.urls]
Homepage = "https://github.com/nvidia-cosmos/cosmos-rl"

[project.scripts]
cosmos-rl = "cosmos_rl.launcher.launch_all:main"
cosmos-cli = "cosmos_rl.cli.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
cosmos_rl = [
    "launcher/*.sh",
    "tools/chat_templates/*.jinja2"
]

[tool.uv.extra-build-dependencies]
flash-attn = ["torch"]

[tool.setuptools.packages.find]
include = ["cosmos_rl*"]

[project.optional-dependencies]
wfm = [
    "termcolor",
    "aioboto3",
    "aiobotocore",
    "imageio",
    "imageio-ffmpeg",
    "webdataset",
    "decord",
    "trimesh",
    "opencv-python-headless",
    "better_profanity",
    "nltk",
    "retinaface-py",
]

vla = [
    "bddl",
    "easydict",
    "einops",
    "future",
    "gym", # for legacy purpose, by libero/robomimic
    "gymnasium",
    "hydra-core",
    "libero",
    "math-verify",
    "matplotlib",
    "numpy<2",
    "opencv-python",
    "robomimic",
    "robosuite==1.4",
    "thop",
    "timm<1",
    "wandb>0.13.1",
    "transformers<5.0.0",
    "sentencepiece",
]

rl = [
    "vllm>=0.8.5",
    "flash-attn>=2.8.3",
]

tao = [
    "nvidia-tao-daft>=2.9.1",
]

all = [
    "cosmos_rl[wfm,vla,rl]",
]

[tool.uv.sources]
libero = { git = "https://github.com/fwd4/LIBERO.git" }
